# personal-utils

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml
.husky/: pre-commit
config/: my-apps.json
my_utils/: main.py  util.py  utils.py
my_utils/tests/unit/: test_utils.py
python3/: .pre-commit-config.yaml  README.md  lint-fix.sh  lint.sh  pyproject.toml  scripts.py
python3/cm_util/: config_manager.py  history_manager.py  main.py  music.py  util.py  video.py
python3/cm_util/tests/unit/: test_main.py  test_music.py  test_utils.py  test_version.py  test_video.py
python3/config/: my-apps.json
python3/mac_utils/: config_manager.py  history_manager.py  main.py  util.py
python3/mac_utils/tests/unit/: test_main.py  test_music.py  test_utils.py  test_version.py  test_video.py
python3/my_utils/: main.py  my_music.py  util.py
python3/tests/: test_my_utils.py
python3/tests/unit/: test_my_utils.py  test_utils.py
test-files/: test-newest.json  test0.json  test1.json  test2.json
tests/: test_utils.py
