[tool.poetry]
name = "cm-util"
version = "0.1.0"
description = ""
authors = ["Cooper <cooperxmiller@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.6.0"
yt-dlp = "^2025.2.19"
pyyaml = "^6.0"
mutagen = "^1.47.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
coverage = "^7.3.2"
pre-commit = "^3.6.0"
black = "^23.12.1"
flake8 = "^7.0.0"
isort = "^5.13.2"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
cm-util = "cm_util.main:app"
test = "scripts:run_test"
coverage = "scripts:run_coverage"

[tool.coverage.run]
omit = [
    "**/tests/**",
    "*/__init__.py",
]
[tool.coverage.report]
omit = [
    "**/tests/**",
    "*/__init__.py",
]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
no_strict_optional = true
